# upctr

./: .gitignore  INSTALL  Makefile  Makefile.am  Makefile.in  README  README.txt  UpcLibrary.C  UpcLibrary.h  aclocal.m4  build  builder.C  builder.h  configure  configure.ac  optimize.C  optimize.h  upctr.C
tests/: dgemm.upc  test01.upc  test02.upc  test03.opt.upc  test03.opt2.upc  test03.opt3.upc  test03.upc  test04.upc  test05.upc  test06.upc  test07.opt.upc  test07.opt2.upc  test07.upc  test08.opt.upc  test08.opt2.upc  test08.upc  upctr_util.h
tests/vecadd/: Makefile  vecadd_memget_dy.upc  vecadd_naive.upc  vecadd_naive_dy.upc  vecadd_pri.upc  vecadd_pri_dy.upc
